# pulse

./: Cargo.toml  README.md
benches/: benchmarks.rs  effects_bench.rs
crates/pulse-vst3-macro/: Cargo.toml
crates/pulse-vst3-macro/src/: lib.rs
src/: lib.rs  main.rs
src/audio/: file.rs  mod.rs  realtime.rs
src/buffer/: audio.rs  mod.rs
src/cli/: effect.rs  install.rs  mod.rs  package.rs  plugins.rs
src/effects/: compressor.rs  delay.rs  distortion.rs  eq.rs  filter.rs  mod.rs  reverb.rs
src/export/: adapter.rs  audio_processor.rs  automation.rs  bundle.rs  category.rs  com.rs  component.rs  controller.rs  edit_controller.rs  entry.rs  factory.rs  mod.rs  param_map.rs  process_adapter.rs  state_bridge.rs  types.rs  unit_info.rs
src/format/: mod.rs
src/format/au/: instance.rs  mod.rs  stub.rs
src/format/clap/: extensions.rs  host.rs  instance.rs  loader.rs  mod.rs
src/format/vst3/: host.rs  instance.rs  mod.rs
src/host/: database.rs  instance.rs  mod.rs  scanner.rs
src/midi/: input.rs  message.rs  mod.rs
src/param/: automation.rs  mod.rs  smooth.rs  types.rs  value.rs
src/plugin/: config.rs  info.rs  mod.rs  trait_def.rs
src/preset/: format.rs  mod.rs
src/process/: context.rs  mod.rs  transport.rs
tests/: integration_vst3.rs
