[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
description = "Audio plugin framework - host VST3/AU/CLAP plugins and build effects"
license = "MIT"
repository = "https://github.com/sudokatie/pulse"
keywords = ["audio", "plugin", "vst", "effect", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
# Audio
cpal = "0.15"
hound = "3.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "effects_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
