[package]
name = "pulse"
version = "0.1.0"
edition = "2021"
description = "Audio plugin framework - host VST3/AU/CLAP plugins and build effects"
license = "MIT"
repository = "https://github.com/sudokatie/pulse"
keywords = ["audio", "plugin", "vst", "effect", "dsp"]
categories = ["multimedia::audio"]

[dependencies]
# Audio
cpal = "0.15"
hound = "3.5"
midir = "0.10"

# FFT for linear phase EQ
rustfft = "6.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
rand = "0.8"
dirs = "5"
parking_lot = "0.12"
crossbeam-channel = "0.5"
ctrlc = "3.4"

# Dynamic loading for plugins
libloading = "0.8"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
